src/snapshots/jsonptr__assign__json__tests__test@13-data.snap
---
source: src/assign.rs
description: "case #13: asserting that the JSON data is as expected after assignment"
info:
  data: []
  ptr: /a
  assign: foo
---
[]
