src/snapshots/jsonptr__assign__json__tests__test@2-data-2.snap
---
source: src/assign.rs
description: "case #2: asserting that the JSON data is as expected after assignment"
info:
  data:
    foo: bar
  ptr: /foo
  assign: baz
---
{"foo":"baz"}
