src/snapshots/jsonptr__assign__json__tests__test@2-data.snap
---
source: src/assign.rs
description: "case #2: asserting that the JSON data is as expected after assignment"
info:
  data:
    foo:
      - bar: baz
      - bar: qux
  ptr: /foo/-/bar
  assign: quux
---
{"foo":[{"bar":"baz"},{"bar":"qux"},{"bar":"quux"}]}
