src/snapshots/jsonptr__assign__json__tests__test@2-result-2.snap
---
source: src/assign.rs
description: "case #2: asserting that the replaced JSON data returned from the assignment is as expected"
info:
  data:
    foo: bar
  ptr: /foo
  assign: baz
---
Ok(
    Some(
        String("bar"),
    ),
)
