src/snapshots/jsonptr__assign__json__tests__test@3-data.snap
---
source: src/assign.rs
description: "case #3: asserting that the JSON data is as expected after assignment"
info:
  data:
    foo:
      - bar: baz
      - bar: qux
      - bar: quux
  ptr: /foo/0/bar
  assign: grault
---
{"foo":[{"bar":"grault"},{"bar":"qux"},{"bar":"quux"}]}
